<resources>
    <string name="app_name">WePic</string>

    <!--facebook login-->
    <string name="facebook_app_id">1845415279074750</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="intro1_title">WePic</string>
    <string name="intro1_text">너희들의 최고의 순간을 멋진 사진으로 공유해봐</string>
    <string name="intro2_title">최고의 순간을 공유</string>
    <string name="intro2_text">너희들의 최고의 순간을 멋진 사진으로 공유해봐</string>

    <string name="link_to_search_id_pw">로그인 정보를 잊으셨나요? 아이디 비밀번호 찾기</string>
    <string name="link_to_register">계정이 없으신가요? 가입하기</string>
    <string name="register_agree_txt">가입하면 약관 및 개인정보취급방침에 동의하게 됩니다.</string>

    <!--좋아요 팔로잉 부분-->
    <string name="like_following_like">%1$s님이 %2$s님의 사진을 좋아합니다. %3$s</string>
    <string name="like_following_follow">%1$s님이 %2$s님을 팔로우하기 시작했습니다. %3$s</string>
    <string name="like_following_comment">%1$s님이 %2$s님의 사진에 댓글을 남겼습니다: \n%3$s %4$s </string>
    <string name="like_following_likelist">%1$s님이 게시물 %2$d개를 좋아합니다. %3$s</string>

    <!--좋아요 내 게시물 부분-->
    <string name="like_my_article_like">%1$s님이 회원님의 사진을 좋아합니다. %2$s</string>
    <string name="like_my_article_follow">%1$s님이 회원님을 팔로우하기 시작했습니다. %2$s</string>
    <string name="like_my_article_comment">%1$s님이 회원님의 사진에 댓글을 남겼습니다: \n%2$s %3$s</string>
    <string name="like_my_article_likelist">%1$s님이 회원님의 게시물 %2$d개를 좋아합니다. %3$s</string>

    <!--아티클 정보-->
    <string name="article_view_cnt">조회 %1$s</string>
    <string name="article_comment_cnt">댓글 %1$s 모두 보기</string>
    <string name="article_like_cnt">좋아요 %1$s개</string>

    <!--팔로우 취소 다이얼로그-->
    <string name="cancel_follow_dialog">%1$s님을 팔로우 취소하시겠습니까?</string>

    <!--타임라인(팔로잉) 비어있는 경우-->
    <string name="timeline_following_empty">게시글이 없습니다.\n팔로잉을 통해 다양한 사람들의 게시글을 구경해보세요.</string>
    <!--좋아요(팔로잉) 비어있는 경우-->
    <string name="like_following_empty">팔로잉한 사람이 없습니다.\n팔로잉을 통해 다양한 사람들의 소식을 받아보세요.</string>
    <!--좋아요(내 게시물) 비어있는 경우-->
    <string name="like_my_article_empty">등록한 내 게시물이 없습니다.\n첫 게시물을 등록해보세요.</string>

    <!--크롭 화면 하단 텍스트-->
    <string name="cropview_txt">사진을 움직이거나 크기를 조절하세요.</string>

    <!--앱 설정 휴면 계정-->
    <string name="stop_account_txt">계정 휴면으로 설정하면 회원님의 모든 게시물은 어느 누구도 볼 수 없습니다.\n(잠시 일상을 떠나 쉬고싶은 회원님께 유용합니다.)</string>

    <!--아티클 삭제 확인 다이얼로그-->
    <string name="article_delete_alert_txt">이 사진을 삭제하시겠어요?</string>

    <!--아티클 신고-->
    <string name="article_report_1">불쾌한 게시물</string>
    <string name="article_report_2">불법 광고나 홍보</string>
    <string name="article_report_3">폭력적이거나 음란한 게시물</string>
    <string name="article_report_4">타인을 사칭하는 게시물</string>
    <string name="article_report_5">기타</string>

    <!--아티클 신고 후 차단 여부 다이얼로그-->
    <string name="report_after_block_txt">해당 게시자 %1$s님을 차단 하시겠습니까?</string>

    <!--내 소개글 다이얼로그 비어있을 때 문구-->
    <string name="self_introduce_empty_txt">소개글이 없습니다.</string>

    <!--위시 리스트 상단 문구-->
    <string name="wishlist_txt">위시리스트에 있는 내용은 회원님만 볼 수 있습니다.</string>

    <!--연락처 추천 친구 문구-->
    <string name="recommend_phoneNum_txt1">연락처에 있는 사람 중 %1$d명이 WePic을 사용 중입니다.</string>
    <string name="recommend_phoneNum_txt2">친구들의 사진과 동영상을 확인해보세요.</string>


</resources>
